# ReScale4DL

./: .gitignore  3.10  README.md  environment.yml  makefile  pyproject.toml
.github/workflows/: build_deploy_docs.yml  build_deploy_pypi.yml  build_deploy_test_pypi.yml  oncall_test.yml
Examples/analysis_results/: dataset_info.csv  pdf_metrics.csv
Examples/data/Processed/staph_blurred_0.5/Images/: 1.tif
Examples/data/Processed/staph_blurred_1/Images/: 1.tif
Examples/data/Processed/staph_blurred_1/Labels/: 1.tif
Examples/data/Processed/staph_downsampled_2_mode_mean_diff_dims/Labels/: 1.tif
Examples/data/Processed/staph_downsampled_2_mode_mean_same_dims/Images/: 1.tif
Examples/data/Processed/staph_upsampled_2_diff_dims/Labels/: 1.tif
Examples/data/Processed/staph_upsampled_2_same_dims/Images/: 1.tif
Examples/data/Processed/staph_upsampled_2_same_dims/Labels/: 1.tif
Examples/rescaled_data/Deepbacs_Semantic_Segmentation/OG/GT/: pos2_fr_20.tif  pos5_fr_20.tif  pos7_fr_1.tif  pos7_fr_20.tif
Examples/rescaled_data/Deepbacs_Semantic_Segmentation/OG/Prediction/: pos2_fr_20.tif  pos5_fr_20.tif  pos7_fr_1.tif  pos7_fr_20.tif
Examples/rescaled_data/Saureus_instance_segmentation/downsampling_2/GT/: 11.tif  (+2 more)
Notebooks/: Evaluate_Segmentation.ipynb  Object_Prediction_Statistics.ipynb  Object_Prediction_Statistics_Graphs.ipynb  Rescale_Foundation_Models.ipynb  Rescale_Images.ipynb  crops_foundation_models.ipynb  preprocess_data.ipynb
Notebooks/python_scripts/: batch.py  morphology.py
data/Processed/staph_downsampled_2_mode_mean_diff_dims/Images/: 1.tif
data/test/staph/Images/: 1.tif
data/test/staph/Labels/: 1.tif
notebooks/tests/: test_upscaling.ipynb
rescale4dl/: deprecated_functions.py  downscaling.py  morphology.py  upscaling.py
src/downsampling/: __init__.py  batch.py  utils.py
src/downsampling/preprocessing/: downscaling.py  upscaling.py
src/rescale4dl/: morphology.py  utils.py
src/rescale4dl/metrics/: metrics_skeleton.py
(+37 files in other folders)
